# codex

./: EXAMPLES.md  GETTING_STARTED.md  PHASED_APPROACH.md  PLUGIN_GALLERY.md  PRD.md  README.md  RELEASE.md  TECHNICAL_SPECIFICATION.md  pyproject.toml
.github/scripts/: setup_project.sh
examples/: demo_basic.sh  demo_rest_api.sh
mcp_server/: __init__.py  __main__.py  cli.py  engine.py  shell.py  storage.py
mcp_server/plugins/: __init__.py  base.py  example_connector.py  rest_api.py
tests/: __init__.py  test_cli.py  test_engine.py  test_plugins.py  test_rest_api_plugin.py  test_storage.py
