[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server Memory Graph CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["flask"]
license = { text = "MIT" }
authors = [
  { name = "lecharles" },
  { name = "Codex Agent as per lecharles request" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.scripts]
mcp-server = "mcp_server.__main__:main"